- Email: fix: an attachment would not show in an exceptional case needed to check in_array strict
- Calendar portlet: Don't display the events in the appointments widget that are not shared anymore to the user.
- Projects2: Controller action that takes over closed weeks from Projects v1, also during Projects2 install.
- Files: Added check for file already exist in addFileSystemFile

05-03-2015 5.0.98
- Calendar: Added pager to categories selection in the event dialog

04-03-2015 5.0.97
- Wrong build

04-03-2015 5.0.96
- Calendar & Tasks: fixed displaying task details in calendar list view.
- Address book: able to match imported records to existing records during import.
-	Leavedays: fixed display of estimated leave hours (sometimes it was not shown).
- Leavedays: display used holiday hours in the leave days in the calendar module.
- Better font handling in mail client.

09-02-2015 5.0.95
- Fixed font-style display in some emails
- Autocomplete failing after moving email composer fixed
- Fixed SMIME decryption of outlook messages

07-01-2015 5.0.94
- Tasks can be shown in the calendar at start date, end date or entirely depending on the "calendar_tasklist_show" config option

22-12-2014 5.0.93
- Shared files tree regenerated cache when item on ACL is delete
- Move event via context menu back in time failed
- Core: fixed timezone setting for Z-Push sync.

03-12-2014 5.0.92
- Set max_execution_time to 0 in download action
- Time Tracking: No overwriting travel distance with default distance.
- Calendar: When adding participants, check if participant already can be found, if so then update the existing one, otherwise create a new one.
- Calendar: Fixed double deletion of events when removing a calendar.
- Weekly recurring events without an BYDAY directive will recur on the correct day when the event start between 00:00 and 01:00

11-11-2014 5.0.91
- File Search: fixed searching for file types